option optimize_for = SPEED;
option java_package = "pipe.common";

/**
 * the accompanying information for all messages. Provides origination,
 * security, authentication, and tracking information
 */
message Header {  
    required int32 node_id = 1;
    required int64 time = 2;
    optional string message = 4 [default = "Hello from protoc!!"];
   
    // if the message is for a specific node, this will be set
    optional int32 destination = 8;

    // This factor limits the distance that a msg travels from the originating 
    // node. Default (-1) is the whole network (not restricted).
    optional int32 max_hops = 10 [default = -1];
    
    optional bool election = 11;
}

message Failure {
    required int32 id = 1;
    optional int32 ref_id = 2;
    optional string message = 3;
}

/**
 * description of the work
 */
message Task {  
    optional int32 chunk_no = 1;
    optional int32 no_of_chunks = 2;   
    optional bytes chunk = 6;
    enum TaskType {
      READ = 1;
      WRITE = 2;
   }
   required TaskType task_type = 3;
   required string sender = 4;
   required string filename = 5;
   //optional CommandMessage cmdMsg = 7;   
}
